# AI-Career-Intelligence-Platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: rag-architect.md  security-auditor.md
.claude/rules/: AGENT_RULES.md  GIT_RULES.md
.claude/skills/handoff/: SKILL.md
.claude/skills/ship-review/: SKILL.md
.claude/skills/start-task/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05d06bfd0b37_create_users_table.py
backend/app/: deps.py  main.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: user.py
backend/app/repositories/: __init__.py  user_repo.py
backend/app/routes/: auth.py  health.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: auth_service.py
backend/tests/: conftest.py  test_auth_api.py  test_health.py  test_security.py
docs/superpowers/specs/: 2026-07-09-repo-structure-design.md
